# rlinks-backend

./: Containerfile  api.py  app.py  config.py  config.toml  db.py  main.py  public.py  pyproject.toml
api/: bookmark.py  public.py
db/: __init__.py  bookmarks.py  db.py  tags.py
static/: app.js  index.html
templates/: alternatives.html
