[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlinks-backend"
version = "0.1.0"
description = "Basic Python project scaffold"
authors = [
  { name = "Shmuel Leib Melamud", email = "shmuel@melamud.family" }
]
requires-python = ">=3.13"
dependencies = [
  "pydantic-settings",
  "psycopg[binary]>=3.2",
  "fastapi>=0.115",
  "jinja2",
  "uvicorn[standard]>=0.30"
]
